# ChangeLog for dev-python/scripttest
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 May 2010; James Rowe <jnrowe@gmail.com> scripttest-1.0.3.ebuild:
  Keyworded ~x86.

*scripttest-1.0.3 (04 May 2010)

  04 May 2010; James Rowe <jnrowe@gmail.com> +scripttest-1.0.3.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
