@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST ScriptTest-1.0.3.tar.gz 11302 RMD160 b7a94dbd0eeba5d8bd568faee2e6400ed97dd42d SHA1 7f7b56289fdc2e3b0c300a358f3a38d29ee0078e SHA256 0caf1bb0e557fac4b73b70a3f2db3d33eb0164190206ec58d617a5b2bb529487
+DIST ScriptTest-1.0.4.tar.gz 12015 RMD160 5531ed7d88dcc7c107db1edbd906f21d579b5020 SHA1 ed53307e065258e13c266ac8855c28e0184be926 SHA256 695fb8201aa3d9ea6af51fb00a8dcf9cc29fbb862f3f999faeddc2705c5f4714
 EBUILD scripttest-1.0.3.ebuild 499 RMD160 b2864bd33ccd3359282530d9c396918720a476fd SHA1 453fa51f7f17935629457c6b4b9b26b9cb6bfc13 SHA256 226b502308d4bb72b86ed2f085af5357ba886a327eb6fdfd218813c618a282b0
-MISC ChangeLog 358 RMD160 ae8e6fa25422021d4391f969d011d0f74912e2bd SHA1 2fee88f4dd0f3829ceb2ee210a7ce44442735a4a SHA256 ec1ead7d5c1417bd3ba457ff581e2ad4b070aa6feab569db7a348f46051b3af5
+EBUILD scripttest-1.0.4.ebuild 503 RMD160 9cdfd89c52742500e56d453dd331bccaa8a9a734 SHA1 6541bbf7071f73c21c35daf95202c2a9023a0ffa SHA256 14eec5c0094f40c4488d583e09f4b9bb33afbd1337409237017b46fff40bb026
+MISC ChangeLog 485 RMD160 7aedbcc5952a1a87aa3b681181c23f1009da9032 SHA1 5c2f610bcd08591bd65465d0eb19f3c888a2bfe1 SHA256 b7525e68991ff7a7f8943b4a4fb54dc5173d3e12c1f5c494d74a46d5a8e2c563
 MISC metadata.xml 735 RMD160 c1403a4b962fda8da806b64586aae21edb812b13 SHA1 8b83408204af46b967bb600599b626795d599988 SHA256 1d473bcede227f5858f21648dc38b4a4f1fe248404ef3b1498943ebb4a9a1912
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkvhHKIACgkQzJrj3cAXR0nXVwCgsCfH6HwsWEkw4Tfi4xn7rVAo
-k1AAn3iv15WHQmRzG6fh4fjJ8MnRxjaZ
-=tLjJ
+iEYEARECAAYFAkwGpoEACgkQzJrj3cAXR0nHdwCglOYfpP0JwpAWr6Gpi0bbHuCF
+GGwAni4/dIlFk4h3R+uLnGgQFes9HoKx
+=c1ol
 -----END PGP SIGNATURE-----
