@@ -1,0 +1,22 @@
+>=app-admin/eselect-python-20091230 =dev-lang/python-2* test? ( dev-python/nose )
+>=app-admin/eselect-python-20091230 =dev-lang/python-2*
+0
+http://pypi.python.org/packages/source/S/ScriptTest/ScriptTest-1.0.4.tar.gz
+
+http://pythonpaste.org/scripttest/
+MIT
+Helper to test command-line scripts
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+test
+
+
+
+2
+
+compile install postinst postrm prepare test
+
+
+
+
+
