@@ -30,5 +30,7 @@ REM 2010-06-17 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/benchmarker
 REM 2010-06-17 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/gistapi-0.1.2 %a
 REM 2010-06-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/benchmarker-1.0.0 %a
 REM 2010-06-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/gistapi-0.1.2 %a
+REM 2010-07-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/scripttest-1.0.4 %a
+REM 2010-07-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/scripttest-1.0.4 %a
 
 # vim: set sw=4 sts=4 et tw=80 fenc=utf-8 ft=remind:
