@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*scripttest-1.0.4 (02 Jun 2010)
+
+  02 Jun 2010; James Rowe <jnrowe@gmail.com> +scripttest-1.0.4.ebuild:
+  Version bump [d2e].
+
   05 May 2010; James Rowe <jnrowe@gmail.com> scripttest-1.0.3.ebuild:
   Keyworded ~x86.
 
